Complete annual dues, member access, and validation improvements